<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Homractivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/todo1"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mainscreenimg" />

    <Button
        android:id="@+id/button2"
        android:layout_width="205dp"
        android:layout_height="62dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:onClick="secondChoice"
        android:rotationX="-21"
        android:rotationY="30"
        android:text="@string/how_to_play"
        android:textColor="#7FFDEB"
        android:textSize="20sp"
        app:backgroundTint="#9000A8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="158dp"
        android:layout_height="65dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="380dp"
        android:onClick="firstChoice"
        android:rotationX="-21"
        android:rotationY="21"
        android:text="@string/play"
        android:textColor="#7FFDEB"
        android:textSize="22sp"
        app:backgroundTint="#9000A8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button15"
        android:layout_width="260dp"
        android:layout_height="62dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="40dp"
        android:onClick="RosterChoice"
        android:rotationX="-25"
        android:rotationY="32"
        android:text="@string/curent_roster"
        android:textColor="#7FFDEB"
        android:textSize="20sp"
        app:backgroundTint="#9000A8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/paimon1"
        android:contentDescription="@string/todo" />



</androidx.constraintlayout.widget.ConstraintLayout>