<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity7">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baalimmg" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/purple_200"
        android:fontFamily="casual"
        android:gravity="center_horizontal"
        android:text="@string/baal"
        android:textColor="#130033"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="260dp" />

    <Button
        android:id="@+id/button21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="back2choice"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textSize="28sp"
        app:backgroundTint="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
       />

</androidx.constraintlayout.widget.ConstraintLayout>